syntax = "proto3";

package erda.core.dicehub.release;
option go_package = "github.com/erda-project/erda-proto-go/core/dicehub/release/pb";
import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "common/openapi.proto";
import "common/http.proto";

service Opus {
  option (erda.common.openapi_service) = {
    service: "dicehub",
    auth: {
      check_login: true,
      check_token: true,
    }
  };

  rpc PutOnArtifacts (PutOnArtifactsReq) returns (common.VoidResponse) {}
  rpc PutOffArtifacts (PutOffArtifactsReq) returns (common.VoidResponse) {}
  rpc ListArtifacts (ListArtifactsReq) returns (ListArtifactsResp) {}
}

message PutOnArtifactsReq {
  string orgID = 1;
  string userID = 2;
  string opusID = 4;
  string opusVersionID = 5;
  string releaseID = 6;
}

message PutOffArtifactsReq {
  string orgID = 1;
  string userID = 2;
  string releaseID = 3;
}

message ListArtifactsReq {
  string orgID = 1;
  string userID = 2;
  repeated string releaseIDs = 3;
}

message ListArtifactsResp {
  map<string, ListArtifactsRespItem> data = 1;
}

message ListArtifactsRespItem {
  string opusID = 1;
  string opusVersionID = 2;
  string releaseID = 3;
}